--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
               doesn’t it?<br />
               It is nothing but an illusion.<br /><br />
               じゃんけんとは奇妙だ。勝っても負けても、誰も人生は変わらぬ。<br />
-              だが今この瞬間だけは……変わる気がするだろ？<br />
-              気のせいであるが。
+              だが今この瞬間だけは変わる気がするだろ？……気のせいであるが。
             </div>
           </div>
         </div>
