--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="oracle-panel">
           <div class="oracle-title roboto">Oracles</div>
           <div class="oracle-frame">
-            <div id="oracle">
+            <div id="oracle" class="roboto">
               Rock-paper-scissors is strange. Win or lose, no one’s life truly
               changes...<br />
               Yet in this very moment, it feels as if something might shift,
@@ -26,6 +26,10 @@
               だが今この瞬間だけは変わる気がするだろ？……気のせいであるが。
             </div>
           </div>
+        </div>
+        <div class="qr-wrap">
+          <div class="qr-title roboto">Play on Mobile</div>
+          <img src="./img/qr.png" class="qr-code" alt="QR code" />
         </div>
       </div>
 
@@ -99,12 +103,12 @@
           <div class="data-title roboto">Play Data</div>
           <div class="data-panel">
             <div class="data-items">
-              <div class="data-label lend">Lending Total</div>
-              <div class="data-value lend">0</div>
+              <div class="data-label lend roboto">Lending Total</div>
+              <div class="data-value lend roboto">0</div>
             </div>
             <div class="data-items">
-              <div class="data-label diff">Net Gain</div>
-              <div class="data-value diff">0</div>
+              <div class="data-label diff roboto">Net Gain</div>
+              <div class="data-value diff roboto">0</div>
             </div>
           </div>
         </div>
