add: smartphone debug mode / point ceiling system

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>SLOT God of Janken</title>
   </head>
+  
   <body>
     <header></header>
 
