add: play data / fix: rayout

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>SLOT God of Janken</title>
   </head>
-  
+
   <body>
     <header></header>
 
@@ -100,16 +100,33 @@
           <div class="graph-title roboto">Net Gain Curve</div>
           <canvas id="slumpGraph"></canvas>
         </div>
+
         <div class="data">
           <div class="data-title roboto">Play Data</div>
           <div class="data-panel">
             <div class="data-items">
-              <div class="data-label lend roboto">Lending Total</div>
-              <div class="data-value lend roboto">0</div>
+              <div class="data-label total-game roboto">Total Game:</div>
+              <div class="data-value total-game roboto">0</div>
             </div>
+
             <div class="data-items">
-              <div class="data-label diff roboto">Net Gain</div>
+              <div class="data-label bonus roboto">Bonus Count:</div>
+              <div class="data-value bonus roboto">0</div>
+            </div>
+
+            <div class="data-items">
+              <div class="data-label max roboto">Max Coins:</div>
+              <div class="data-value max roboto">0</div>
+            </div>
+
+            <div class="data-items">
+              <div class="data-label diff roboto">Net Gain:</div>
               <div class="data-value diff roboto">0</div>
+            </div>
+
+            <div class="data-items">
+              <div class="data-label lend roboto">Lending Total:</div>
+              <div class="data-value lend roboto">0</div>
             </div>
           </div>
         </div>
