change: jpg to webp

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 
               <div class="rush">
                 <div class="rush-in">
-                  <img src="./img/jankenRush.jpg" alt="ラッシュ突入画像" />
+                  <img src="./img/jankenRush.webp" alt="ラッシュ突入画像" />
                 </div>
               </div>
               <img
                 id="mdisplay"
                 class="initial"
-                src="./img/title.png"
+                src="./img/title.webp"
                 alt="タイトル画面"
               />
             </div>
