--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             <img src="./img/rush_lamp.png" alt="" />
           </div>
           <div id="point" class="game-seg-items">
-            <span class="label roboto">Point</span><span class="value">0</span>
+            <span class="label roboto">Point</span
+            ><span class="value">000</span>
           </div>
         </div>
 
@@ -51,13 +52,13 @@
           <div class="display-wrapper">
             <div class="main-display">
               <div class="seg-display">
-                <div id="payout" class="seg-display-items">
-                  <div class="label roboto">Payout</div>
-                  <div class="value">00</div>
-                </div>
                 <div id="coin" class="seg-display-items">
                   <div class="label roboto">Credit</div>
                   <div class="value">0</div>
+                </div>
+                <div id="payout" class="seg-display-items">
+                  <div class="label roboto">Payout</div>
+                  <div class="value">00</div>
                 </div>
               </div>
 
